# slacker

./: .gitignore  README.md  pyproject.toml
src/slacker/: __init__.py  __main__.py  api.py  auth.py  formatters.py  utils.py
src/slacker/commands/: __init__.py  activity.py  api_call.py  discover.py  dms.py  login.py  record.py  reminder.py  reminders.py  whoami.py
