[project]
name = "slacker"
version = "1.0.0"
description = "Extract Slack authentication credentials from browser session"
requires-python = ">=3.8"
dependencies = [
    "playwright>=1.40.0",
    "httpx>=0.27.0",
]

[project.scripts]
slacker = "slacker.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/slacker"]
